--- a/layout/default/content.html
+++ b/layout/default/content.html
@@ -23,9 +23,9 @@
 							<h1 class="card-title"><print content="title"></h1>
 							<div class="card-text">
 								<cost>
-									<div class="price_content mb-4 d-block d-sm-none">
+									<div class="mb-4 d-block d-sm-none">
 										<div>
-											<div class="h4 text-right"><print content="cost"></div>
+											<div class="price"><print content="cost"></div>
 											<print content="quantity">
 											<service>
 												<a class="btn btn-outline-secondary btn-block" href="bookings/<print content=bookservice>">Book Now</a>
