--- a/layout/default/side_menu.html
+++ b/layout/default/side_menu.html
@@ -2,7 +2,7 @@
 			<controls>
 				<div class="list-group mb-4">
 					<div class="list-group-item">
-						<div class="h4"><print content="cost"></div>
+						<div class="price"><print content="cost"></div>
 						<print content="quantity">
 						<service>
 							<a class="btn btn-outline-secondary btn-block" href="bookings/<print content=bookservice>">Book Now</a>
