--- a/core/css/seohelper.css
+++ b/core/css/seohelper.css
@@ -67,3 +67,25 @@ body.depth * * * * * * * * * *{background-color:rgba(255,0,0,.1)}
 @-webkit-keyframes slide{0%{transform:scale(1)}50%{opacity:.5;transform:scale(2)}100%{transform:scale(1)}}
 @-o-keyframes slide{0%{transform:scale(1)}50%{opacity:.5;transform:scale(2)}100%{transform:scale(1)}}
 @keyframes slide{0%{transform:scale(1)}50%{opacity:.5;transform:scale(2)}100%{transform:scale(1)}}
+div.development{position:relative;height:24px;background-color:#2f353a!important;background-image:url(../images/developmentmode.png)!important;background-repeat:repeat-x}
+div.development:after{content:'Breakpoint Width > ALL (max-width:575.98px)';z-index:9999;position:absolute;top:2px;left:2px;color:#fff;font-family:sans-serif;font-size:14px;padding:2px 5px}
+div.development:before{content:'Current Width: ' attr(data-width) 'px';z-index:9999;position:absolute;top:2px;right:2px;color:#fff;font-family:sans-serif;font-size:14px;padding:2px 5px}
+@media (max-width:361px){
+  div.development{height:48px}
+  div.development:before{top:26px}
+}
+@media (max-width:575.98px){
+  div.development:after{content:'Breakpoint Width > ALL (max-width:575.98px)'}
+}
+@media (min-width:576px){
+  div.development:after{content:'Breakpoint Width > SM (min-width:576px)'}
+}
+@media (min-width:768px){
+  div.development:after{content:'Breakpoint Width > MD (min-width:768px)'}
+}
+@media (min-width:992px){
+  div.development:after{content:'Breakpoint Width > LG (min-width:992px)'}
+}
+@media (min-width:1200px){
+  div.development:after{content:'Breakpoint Width > XL (min-width:1200px)'}
+}
