--- a/layout/default/css/style.css
+++ b/layout/default/css/style.css
@@ -46,6 +46,13 @@ a:hover{color:#888;text-decoration:none}
 .card-img-top{width:100%;object-fit:cover}
 .card-img-top.small{width:100%;height:17rem;object-fit:cover}
 .card-img-top.home{height:10rem;object-fit:cover}
+.price{position:relative}
+.price .sold:after{content:"Sold";position:absolute;top:20px;right:-10px;bottom:0;left:-10px;transform:rotate(25deg);font-size:5em;line-height:1em;color:#f00;text-align:center;text-transform:uppercase;text-shadow:0 0 5px #f00,0 0 20px #000}
+.price .rrp{font-size:1em;display:block}
+.price .cost{font-size:2.5em}
+.price .cost.strike{display:block;font-size:1.75em;text-decoration:line-through}
+.price .reduced{position:relative;font-size:2.5em}
+.price .reduced:before{content:'Reduced to';position:absolute;top:-14px;left:-10px;font-size:14px}
 #menuavatar{width:20px;height:20px}
 #headeravatar{width:32px;height:32px}
 #cart{position:absolute;display:block;top:-10px;right:-5px}
@@ -95,77 +102,22 @@ a:hover{color:#888;text-decoration:none}
 .quote-footer h4{font-size:14px;margin-bottom:4px}
 .quote-footer p{font-weight:400;font-style:italic;font-size:14px}
 footer{font-size:1.25em}
-.chat{
-  z-index:900!important;
-  position:fixed!important;
-  top:auto!important;
-  right:0!important;
-  bottom:0!important;
-  left:auto!important
+.chat{z-index:900!important;position:fixed!important;top:auto!important;right:0!important;bottom:0!important;left:auto!important}
+@media(max-width:361px){
+  footer{margin-bottom:50px!important}
 }
-.chat #chatBody{
-
-}
-.chat #chatScreen{
-  min-height:100px;
-  max-height:300px;
-  overflow-x:none;
-  overflow-y:auto;
-}
-#chatScreen{
-  position:relative;
-  height: auto;
-  min-height: calc(100% - 93px);
-  max-height: calc(100% - 93px);
-  overflow-y: scroll;
-  overflow-x: hidden;
-}
-#chatScreen::-webkit-scrollbar {
-  width: 8px;
-  background: transparent;
-}
-#chatScreen::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.3);
-}
-#chatScreen ul li {
-  display: inline-block;
-  clear: both;
-  float: left;
-  margin: 10px 10px 5px 0;
-  width: calc(100% - 25px);
-  font-size: 0.9em;
-}
-#chatScreen ul li:nth-last-child(1) {
-  margin-bottom: 5px;
-}
-#chatScreen ul li.page img {
-  margin: 6px 8px 0 0;
-}
-#chatScreen ul li.page p {
-  background: #c8ced3;
-  color: #000;
-}
-#chatScreen ul li.admin img {
-  float: right;
-  margin: 6px 0 0 8px;
-}
-#chatScreen ul li.admin p {
-  background: #e4e7ea;
-  color:#000;
-  float: right;
-}
-#chatScreen ul li img {
-  width: 32px;
-  border-radius: 50%;
-  float: left;
-}
-#chatScreen ul li p {
-  display: inline-block;
-  padding: 10px 15px;
-  border-radius: 20px;
-  max-width: 80%;
-  line-height: 130%;
-}
+.chat #chatScreen{min-height:100px;max-height:300px;overflow-x:none;overflow-y:auto}
+#chatScreen{position:relative;height:auto;min-height:calc(100% - 93px);max-height:calc(100% - 93px);overflow-y:scroll;overflow-x:hidden}
+#chatScreen::-webkit-scrollbar{width:8px;background:transparent}
+#chatScreen::-webkit-scrollbar-thumb{background-color:rgba(0,0,0,.3)}
+#chatScreen ul li{display:inline-block;clear:both;float:left;margin:10px 10px 5px 0;width:calc(100% - 25px);font-size:.9em}
+#chatScreen ul li:nth-last-child(1){margin-bottom:5px}
+#chatScreen ul li.page img{margin:6px 8px 0 0}
+#chatScreen ul li.page p{background:#c8ced3;color:#000}
+#chatScreen ul li.admin img{float:right;margin:6px 0 0 8px}
+#chatScreen ul li.admin p{background:#e4e7ea;color:#000;float:right}
+#chatScreen ul li img{width:32px;border-radius:50%;float:left}
+#chatScreen ul li p{display:inline-block;padding:10px 15px;border-radius:20px;max-width:80%;line-height:130%}
 @media(min-width:360px){
   .w-50{width:100%!important}
   .m-4{margin:.75rem 0 .75rem 0!important}
