Consult CHANGELOG.md for v0.0.8 Changes.

--- a/layout/default/meta_head.html
+++ b/layout/default/meta_head.html
@@ -12,6 +12,7 @@
 		<meta name="identifier-url" content="<print meta=url>">
 		<print site_verifications>
 		<link rel="alternate" media="all" href="<print meta=canonical>">
+		<link rel="manifest" href="<print meta=url>manifest.json">
 		<link rel="alternate" type="application/rss+xml" title="<print meta=seoTitle>" href="<print meta=rss>">
 		<link rel="canonical" href="<print meta=canonical>">
 		<link rel="alternate" href="<print meta=canonical>" hreflang="en-AU">
@@ -29,6 +30,11 @@
 		<meta name="twitter:title" content="<print meta=seoTitle>">
 		<meta name="twitter:description" content="<print meta=seoDescription>">
 		<meta name="twitter:image" content="<print meta=shareImage>">
+		<meta name="theme-color" content="#000000">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<meta name="apple-mobile-web-app-title" content="<print config=business>">
+		<link rel="apple-touch-icon" href="<print meta=favicon>">
 		<link rel="publisher" href="<print meta=url>">
 		<link rel="home" href="<print meta=url>" title="Home page">
 		<link rel="stylesheet" type="text/css" href="<print theme>/css/bootstrap.min.css">
