--- a/layout/default/orders.html
+++ b/layout/default/orders.html
@@ -132,13 +132,13 @@
 			  				</table>
 			  			</div>
 			  			<div class="row">
-								<div class="col-12 col-sm-6">
+								<div class="col-12 col-sm-4">
 									<h4>Notes:</h4>
 									<div class="well small">
 										<print order="notes">
 									</div>
 								</div>
-								<div class="col-12 col-sm-6">
+								<div class="col-12 col-sm-4">
 									<h4>Banking Details:</h4>
 									<div class="small">
 										<strong>Bank: </strong><print config="bank"><br>
@@ -146,6 +146,10 @@
 										<strong>Account Number: </strong><print config="bankAccountNumber"><br>
 										<strong>Bank BSB: </strong><print config="bankBSB"><br>
 									</div>
+								</div>
+								<div class="col-12 col-sm-4">
+									<h4>Pay Online:</h4>
+									<print paypal>
 								</div>
 			  			</div>
 			  		</div>
