--- a/layout/default/meta_footer.html
+++ b/layout/default/meta_footer.html
@@ -2,11 +2,20 @@
 		<script src="<print theme>/js/bootstrap.min.js"></script>
 		<script src="<print theme>/js/jquery.fancybox.min.js"></script>
 		<script src="<print theme>/js/aos.js"></script>
+		<script src="<print theme>/js/js.js"></script>
+		<script>
+			$("#newslettersform").submit(function(){
+				$.post($(this).attr("action"),$(this).serialize(),function(data){
+					$("#newsletters").html(data);
+				});
+				return false;
+			});
+		</script>
 		<script>
 			AOS.init();
 		</script>
+		<serviceworker>
 		<jshelper>
-		<script src="<print theme>/js/js.js"></script>
 		<jsrunner>
 		<chatscript>
 			<script>
