--- a/layout/default/footer.html
+++ b/layout/default/footer.html
@@ -25,6 +25,15 @@
 						<a class="libre libre-social libre-2x" href="<print rsslink>" aria-label="RSS Feed"><print rssicon></a>
 					</rss>
 				</div>
+				<paymentoptions>
+					<div class="h3 mt-3">Payment Options</div>
+					<div class="searchsocial">
+						<img src="layout/default/images/paypal.svg" width="100" alt="PayPal"><br>
+						<img src="layout/default/images/cards/visa.png" alt="Visa">
+						<img src="layout/default/images/cards/mastercard.png" alt="Mastercard">
+						<img src="layout/default/images/cards/amex.png" alt="American Express">
+					</div>
+				</paymentoptions>
 			</div>
 			<div class="col-12 col-sm-3">
 				<form class="navbar-form" method="post" action="search">
