--- a/layout/default/orders.html
+++ b/layout/default/orders.html
@@ -130,6 +130,7 @@
 			  						</tr>
 			  					</tfoot>
 			  				</table>
+								<div id="paymenttransaction"></div>
 			  			</div>
 			  			<div class="row">
 								<div class="col-12 col-sm-4">
