--- a/layout/default/side_menu.html
+++ b/layout/default/side_menu.html
@@ -63,11 +63,13 @@
 					</form>
 				</div>
 				<script>
-					$("#reviewform").submit(function(){
-						$.post($(this).attr("action"),$(this).serialize(),function(data){
-							$("#reviewhtml").html(data);
+					document.addEventListener("DOMContentLoaded",function(){
+						$("#reviewform").submit(function(){
+							$.post($(this).attr("action"),$(this).serialize(),function(data){
+								$("#reviewhtml").html(data);
+							});
+							return false;
 						});
-						return false;
 					});
 				</script>
 			</review>
