--- a/layout/default/testimonials.html
+++ b/layout/default/testimonials.html
@@ -77,11 +77,13 @@
 							</div>
 						</form>
 						<script>
-							$("#testimonialform").submit(function(){
-								$.post($(this).attr("action"),$(this).serialize(),function(data){
-									$("#testimonial").html(data);
+							document.addEventListener("DOMContentLoaded",function(){
+								$("#testimonialform").submit(function(){
+									$.post($(this).attr("action"),$(this).serialize(),function(data){
+										$("#testimonial").html(data);
+									});
+									return false;
 								});
-								return false;
 							});
 						</script>
 					</div>
